Fix a bug where some columns of the energymix were overlapping

--- a/app/assets/stylesheets/_energy_mix.sass
+++ b/app/assets/stylesheets/_energy_mix.sass
@@ -125,7 +125,8 @@ body#energy-mix
       page-break-inside: avoid
       margin-left: 0
       width: 100%
-
+      .header, .items, .total
+        width: 350px
       .header
         color: $grey-font-color
       .legend-row
